5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1793_3123.log
== SUBMITION (2019-05-30 19:42:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
soma=0
while(i<size(m)):
	if(i<m[i]):
		soma=soma+((v[0]**(-1)+v[1]**(-1)+v[2]**(-1)+...+v[n-1]**(-1))**(-1))/n
	i=i+1
print(round(soma,2))
-- EXECUTION TIME:
0.488109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3123/main.py", line 5, in <module>
    while(i<size(m)):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:42:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
soma=0
while(i<size(m)):
	if(i<m[i]):
		soma=soma+((v[0]**(-1)+v[1]**(-1)+v[2]**(-1)+...+v[n-1]**(-1))**(-1))/n
	i=i+1
print(round(soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
